[package]
name = "tlsimple"
description = "Simple and tiny TLS supports for Rust (Async FFI of Mbed TLS)."
version = "0.1.4"
edition = "2021"
license = "MIT"

include = ["/build.rs", "/src", "/3rdparty", "!/3rdparty/mbedtls.tar.gz"]

[features]
default = ["hyper-client"]
tokio = ["dep:tokio"]
hyper-client = ["tokio", "dep:hyper"]

[dependencies]
tokio = { version = "1", optional = true }
hyper = { version = "0.14", features = ["tcp", "client", "http1"], optional = true }

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
axum = { version = "0.6", default-features = false, features = ["http1", "http2", "tokio"] }
tower-service = "0.3"

hyper-rustls = { version = "0.24", default-features = false }
tokio-rustls = "0.24"
webpki-roots = "0.23"

# tokio-openssl="*"
# openssl="*"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[profile.release]
panic = "abort" # CAUTIONS! cause tokio worker abort
strip = false
debug = true

[profile.dev]
# debug = false # this switch disabled backtrace
# panic = "abort"
[profile.dev.package."*"]
debug = false
strip = true
opt-level = "z"
