[package]
name = "tlsimple"
description = "TLS for async Rust, with Mbed-TLS."
repository = "https://github.com/kkocdko/tlsimple"
version = "0.3.0"
edition = "2021"
license = "MIT"

include = ["/src", "/3rdparty/mbedtls/include", "/3rdparty/mbedtls/library"]

[lib]
doctest = false # bindgen generated docs includes invalid markdown syntax

[features]
default = ["tower-server", "hyper-client"]
tokio = ["dep:tokio"]
tower-server = ["tokio", "dep:hyper", "dep:http", "dep:hyper-util", "dep:tower-service"]
hyper-client = ["tokio", "dep:hyper", "dep:http", "dep:hyper-util", "dep:webpki-roots"]

[dependencies]
tokio = { version = "1", optional = true }
tower-service = { version = "0.3", optional = true }
hyper = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "tokio"] }
http-body-util = "0.1"

# tower-service = "0.3"
# webpki-roots = { version = "0.25", optional = true }

# hyper-rustls = { version = "0.24", default-features = false }
# tokio-rustls = "0.24"

# tokio-openssl = "0.6"
# openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[profile.release]
panic = "abort"
debug = true

[profile.dev.package."*"]
debug = false
strip = true
